-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
DevProd Correctness
-
Fully Compatible
-
Correctness 2026-03-24
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Double-clicking the variable's value in the side panel produces a text input for users to modify. Changing it from `hello world` to `another string` was producing an error, effectively because it was evaluating `str = another string`.
Now the user can modify it to `another string` and it accepts it with implicit quotes as `"another string"`.
<img width="387" height="152" alt="image" src="https://github.com/user-attachments/assets/9499f5f8-2dea-4ab5-a4f7-f7ae5483389f" />
When setting it to a non-string like `42`, the variable does become a number type. If. user types in `"42"` in the text input, it's appropriately a string.