SERVER-122141: Set raw strings in variable side panel without using quotes (#49979)

GitOrigin-RevId: befcbd310b6aca01c68654e5793a4a2990b6c08d